added prospect count get api
